--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@emailjs/browser": "^4.4.1",
     "@react-three/drei": "^9.108.4",
     "@react-three/fiber": "^8.16.8",
+    "@types/three": "^0.166.0",
     "framer-motion": "^11.3.8",
     "maath": "^0.10.8",
     "react": "^18.3.1",
@@ -24,6 +25,7 @@
     "autoprefixer": "^10.4.19",
     "postcss": "^8.4.39",
     "tailwindcss": "^3.4.6",
+    "three": "^0.166.1",
     "vite": "^4.0.0"
   }
 }
