--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-vertical-timeline-component": "^3.6.0"
   },
   "devDependencies": {
+    "@azure/static-web-apps-cli": "^1.1.10",
     "@svgr/webpack": "^8.1.0",
     "@vitejs/plugin-react": "^4.0.0",
     "autoprefixer": "^10.4.19",
