--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "@types/three": "^0.166.0",
     "framer-motion": "^11.3.8",
     "maath": "^0.10.8",
+    "particles.js": "^2.0.0",
+    "particlesjs": "^2.2.3",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.25.1",
