--- a/package.json
+++ b/package.json
@@ -8,10 +8,11 @@
   },
   "dependencies": {
     "@emailjs/browser": "^4.4.1",
-    "@react-three/drei": "^9.108.4",
+    "@react-three/drei": "^9.109.2",
     "@react-three/fiber": "^8.16.8",
     "@types/three": "^0.166.0",
-    "framer-motion": "^11.3.8",
+    "framer-motion": "^11.3.17",
+    "glob": "^11.0.0",
     "maath": "^0.10.8",
     "particles.js": "^2.0.0",
     "particlesjs": "^2.2.3",
@@ -19,16 +20,17 @@
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.25.1",
     "react-tilt": "^1.0.2",
-    "react-vertical-timeline-component": "^3.6.0"
+    "react-vertical-timeline-component": "^3.6.0",
+    "rimraf": "^6.0.1"
   },
   "devDependencies": {
-    "@azure/static-web-apps-cli": "^1.1.10",
+    "@azure/static-web-apps-cli": "^2.0.1",
     "@svgr/webpack": "^8.1.0",
-    "@vitejs/plugin-react": "^4.0.0",
+    "@vitejs/plugin-react": "^4.3.1",
     "autoprefixer": "^10.4.19",
-    "postcss": "^8.4.39",
+    "postcss": "^8.4.40",
     "tailwindcss": "^3.4.6",
     "three": "^0.166.1",
-    "vite": "^4.0.0"
+    "vite": "^5.3.4"
   }
 }
